Automatically hide dock

--- a/assets/apps/系统设置.html
+++ b/assets/apps/系统设置.html
@@ -274,9 +274,13 @@
                 <p class="a">显示器</p>
                 <p class="b">还没做😡😭</p>
             </div>
-            <div class="page" id="menubar.dock.rectangle"> <!-- 桌面与程序坞 -->
-                <p class="a">桌面与程序坞</p>
-                <p class="b">还没做😡😭</p>
+            <div class="page" id="menubar.dock.rectangle">
+                <div class="row first last">
+                    <p>自动隐藏和显示程序坞</p>
+                    <div class="contents">
+                        <c-switch id="dock-autohide" state="off"></c-switch>
+                    </div>
+                </div>
             </div>
             <div class="page" id="Siri"> <!-- Siri -->
                 <p class="a">Siri</p>
